2021-06-21  Karl Berry  <karl@freefriends.org>

	* tests/bibtexu-yannis.test: disable again. Fails on
	FreeBSD, OpenBSD, sparc-solaris.
	https://tug.org/pipermail/tlbuild/2021q2/004918.html

2021-06-20  Karl Berry  <karl@freefriends.org>

	* Makefile.am (bibtexu_tests): add tests/bibtexu-{basic,range}.test.
	(EXTRA_DIST, DISTCLEANFILES): likewise.
	* tests/bibtexu-{basic,range}.test,
	* tests/u{basic,range}.{aux,bbl,bib,tex}: new files from Dmitry.

	* tests/bibtexu-yannis.test: reenable (probably failed due to lack
	of pthread?), use same test template.
	* tests/yannis.bib: credit Yannis.

2021-06-20  Dmitry Zheleznyakov <dmitry.zhelezniakov@gmail.com>

	* bibtex-4.c (x_substring, web section 438): adjust pop_lit1
	before icu_fromUChars calls, to avoid crash on page ranges.

2021-06-19  Karl Berry  <karl@freefriends.org>

	* configure.ac [enable_bibtexu]: also check for -lpthread.
	* Makefile.am (bibtexu_LDADD): include $(PTHREAD_LIB).
	Report and fix from Dmitry Zheleznyakov:
	https://tug.org/pipermail/tex-k/2021-June/003591.html

2021-02-06  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* utils.c, configure.ac:
	Show TeX Live version by version option.
	Show bug report address in usage.

2019-05-22  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* bibtex-2.c, bibtex-3.c: Better error messages for debug.
	* bibtex-3.c (icu_strToUpper): React to Str_language.

2019-05-05  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* bibtexu-yannis.test, yannis.aux, yannis.bib, yannis.bbl:
	New test files for BibTeXu.
	* Makefile.am: Add the new test.

2019-03-15  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* Makefile.am: Add bibtex8.1 and bibtexu.1.
	* bibtex8.1, bibtexu.1: New man pages.

2019-03-06  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* bibtex-2.c: Check error status for every call of
	u_strFromUTF8WithSub().

2019-03-05  Akira Kakuto  <kakuto@w32tex.org>

	* bibtex-2.c: Use u_strFromUTF8WithSub() with a substitution