@@ -97,7 +97,6 @@
 #include "unicode/uchar.h"
 #include "unicode/ustdio.h"
 #include "unicode/ustring.h"
-#include "unicode/ucnv.h"
 #include "unicode/ucol.h"
 int32_t                 icu_toUChars (BufType_T buf,
                                       BufPointer_T bf_ptr,
